[project]
name = "deepseek-reverse-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
    "wasmtime>=44.0.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
